@@ -540,8 +540,11 @@ Trunk (unreleased changes)
     HADOOP-3831. Very slow reading clients sometimes failed while reading.
     (rangadi)
 
-		HADOOP-4155. Use JobTracker's start time while initializing JobHistory's
+    HADOOP-4155. Use JobTracker's start time while initializing JobHistory's
     JobTracker Unique String. (lohit) 
+
+    HADOOP-4099. Fix null pointer when using HFTP from an 0.18 server.
+    (dhruba via omalley)
 
 Release 0.18.1 - 2008-09-17
 
